--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,25 +1,5 @@
 /* FONTS USED */
-
-@font-face {
-  font-family: 'Oswald-medium';
-  src: url('../fonts/Oswald-VariableFont_wght.woff') format('woff');
-  src: url('../fonts/Oswald-VariableFont_wght.woff2') format('woff2');
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'Oswald-regular';
-  src: url('..//fonts/Oswald-VariableFont_wght.woff') format('woff');
-  src: url('../fonts/Oswald-VariableFont_wght.woff2') format('woff2');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Montserrat-regular';
-  src: url('../fonts/Montserrat-VariableFont_wght.woff') format('woff');
-  src: url('../fonts/Montserrat-VariableFont_wght.woff2') format('woff2');
-  font-weight: 400;
-}
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
 
@@ -30,11 +10,19 @@ h3 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 :root {
-  font-family: 'Montserrat-regular';
+  font-family: 'Philosopher', sans-serif;
   color: white;
 }
 
@@ -48,6 +36,7 @@ body {
   background-image: url('../images/yosh-ginsu-qexZLgMcbPc-unsplash.jpg');
   background-repeat: no-repeat;
   background-color: orangered;
+  width: 100vw;
   margin: 0 auto;
   height: 100vh;
   display: flex;
