--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -55,6 +55,7 @@ body {
   background-image: url('../images/yosh-ginsu-qexZLgMcbPc-unsplash.jpg');
   background-repeat: no-repeat;
   background-color: orangered;
+  background-position: center bottom;
   width: 100vw;
   margin: 0 auto;
   /* Removing the "bounce effect" during scrolling.*/
