--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 /* SPECIFIC STYLING */
 
-.about {
+.about, .booking-stats p, .hotel-stats p {
   margin: 0 30%;
   font-style: oblique;
   font-size: large;
@@ -44,6 +44,11 @@ table {
   border: 5px solid antiquewhite;
 }
 
+.bottom-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .booking-form {
   margin: 2rem 0 5rem 2rem;
 }
@@ -65,6 +70,49 @@ table {
 .submit-button:hover {
   background-color: rgb(64, 64, 175);
 }
+
+/* 2.0: added visits */
+.booking-stats {
+  margin: 2rem 0 5rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.stats-link {
+  background-color: aliceblue;
+  align-self: center;
+  margin: 1rem;
+  height: 3rem;
+  width: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+
+.travel-h2{
+  text-align: center;
+}
+
+.visits-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 0 4rem;
+}
+
+.visit {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  background-color: #f76d3c;
+}
+
+.stat-page-h2 {
+  text-align: center;
+}
+
+/* .hotel-stats {
+ 
+} */
 
 /* Footer */
 footer {
